use both blogger.com and www.blogger.com in ngrep

--- a/bloggerstatsrc.tmpl
+++ b/bloggerstatsrc.tmpl
@@ -1,7 +1,7 @@
 $blogID      = 'put-here-your-blog-id';
 $bloghost    = 'blogger.com';
-
 $statsurl    = "http://www.$bloghost/blogger_rpc?blogID=$blogID";
+$bloghost    = "www.$bloghost or $bloghost";
 
 $start_year  = 2010;
 $start_month = 5;       # months start from 1, so January is 1
